src/objects/Zone__c.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_for_Partner__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled for Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone_Path__c</fullName>
        <label>Zone Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Zone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>